--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>PersoShift ETF‑Rechner</title>
+  <title>PersoShift ETF‑Rechner</title>
 
   <!-- Schrift & Chart.js -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -10,24 +10,25 @@
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
-    body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:960px;margin:auto;}
-    h1{margin-bottom:1rem;font-size:2rem;}
-    input,button{font-family:inherit;font-size:1rem;padding:0.45rem 0.6rem;border:1px solid #ccc;border-radius:6px;width:100%;box-sizing:border-box;}
-    label{display:block;margin:0.6rem 0;text-align:left;}
-    .row{display:flex;gap:0.6rem;}
-    .btn{background:#5146ff;color:#fff;font-weight:600;border:none;cursor:pointer;border-radius:8px;margin:0.5rem 0;}
+    body{font-family:'Inter',sans-serif;text-align:center;padding:2rem;max-width:800px;margin:auto;}
+    h1{font-size:2.2rem;margin-bottom:1rem;}
+    section{margin-bottom:2rem;text-align:left;}
+    label{display:block;margin:0.5rem 0;font-size:1rem;}
+    input, button{font-family:inherit;font-size:1rem;padding:0.5rem;border:1px solid #ccc;border-radius:6px;width:100%;box-sizing:border-box;}
+    .row{display:flex;gap:0.5rem;}
+    .btn{background:#5146ff;color:#fff;font-weight:600;border:none;cursor:pointer;border-radius:6px;margin:0.5rem 0;}
     .btn:hover{background:#3e37d8;}
-    #advToggle{cursor:pointer;margin:1rem 0;text-decoration:underline;font-weight:600;}
-    #advanced{display:none;border:1px dashed #bbb;padding:1rem;border-radius:8px;}
-    canvas{width:100%!important;height:600px!important;}
-    #warn{color:#c00;font-size:0.9rem;margin-top:0.3rem;min-height:1.2rem;}
+    #advToggle{cursor:pointer;margin:1rem 0;font-weight:600;color:#5146ff;}
+    #advanced{display:none;border:1px dashed #bbb;padding:1rem;border-radius:6px;}
+    #warn{color:#c00;font-size:0.9rem;}
+    canvas{width:100%!important;height:500px!important;margin-bottom:2rem;}
   </style>
 </head>
 <body>
 
-<h1>PersoShift ETF‑Rechner</h1>
+<h1>PersoShift ETF‑Rechner</h1>
 
-<section style="text-align:left">
+<section>
   <label>Monatsrate (€)
     <input id="rate" type="number" value="50" min="0">
   </label>
@@ -47,7 +48,7 @@
       <label style="flex:1">Einmalzahlung (€)
         <input id="lumpsum" type="number" value="0" min="0">
       </label>
-      <label style="flex:1">ab Jahr
+      <label style="flex:1">im Jahr
         <input id="lumpyear" type="number" value="1" min="1">
       </label>
     </div>
@@ -65,104 +66,98 @@
 <canvas id="compare"></canvas>
 
 <script>
-const taxRate = 0.26375;
+const taxRate=0.26375; // 26,375 % Kapitalertragsteuer
+// Elemente
+const rateEl=document.getElementById('rate'), yearsEl=document.getElementById('years'),
+      intEl=document.getElementById('interest'), startEl=document.getElementById('start'),
+      lumpEl=document.getElementById('lumpsum'), lumpYearEl=document.getElementById('lumpyear'),
+      warnEl=document.getElementById('warn'), headlineEl=document.getElementById('headline');
 let chartMain, chartCompare;
 
-const $ = id => document.getElementById(id);
-const fmt = n => n.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});
-
-// Toggle
-$("advToggle").onclick = () => {
-  const box = $("advanced");
-  const open = box.style.display !== 'none';
-  box.style.display = open ? 'none':'block';
-  $("advToggle").textContent = open ? 'Erweiterte Optionen ▼' : 'Erweiterte Optionen ▲';
+// Dropdown
+const advToggle=document.getElementById('advToggle'), advBox=document.getElementById('advanced');
+advToggle.onclick=()=>{
+  const open=advBox.style.display==='block';
+  advBox.style.display=open?'none':'block';
+  advToggle.textContent=open?'Erweiterte Optionen ▼':'Erweiterte Optionen ▲';
 };
 
+// Formatierung
+function fmt(n){return n.toLocaleString('de-DE',{style:'currency',currency:'EUR',maximumFractionDigits:0});}
+
 function calc(withTax){
-  const rate   = +$("rate").value || 0;
-  const yrs    = +$("years").value || 0;
-  const pYear  = (+$("interest").value||0)/100;
-  const start  = +$("start").value || 0;
-  const lump   = +$("lumpsum").value || 0;
-  const lumpY  = +$("lumpyear").value || 0;
-  const warn   = $("warn");
-  warn.textContent='';
+  // Werte lesen
+  const rate=+rateEl.value||0,
+        yrs=+yearsEl.value||0,
+        pYear=(+intEl.value||0)/100,
+        start=+startEl.value||0,
+        lump=+lumpEl.value||0,
+        lumpY=+lumpYearEl.value||0;
+  warnEl.textContent='';
+  if(yrs<1){warnEl.textContent='Bitte Laufzeit ≥ 1 eingeben';return;}
+  if(lump>0 && (lumpY<1||lumpY>yrs)){warnEl.textContent='Einmalzahlung außerhalb Laufzeit';return;}
 
-  if(yrs<1){warn.textContent='Bitte Laufzeit ≥ 1 Jahr';return;}
-  if(lump>0 && (lumpY<1||lumpY>yrs)){warn.textContent='Jahr für Einmalzahlung liegt außerhalb der Laufzeit';return;}
-
-  const rM = pYear/12;
-  let value = start;
-  let paid  = start;
-
-  const labels=[], depo=[], netArr=[], taxArr=[];
+  // Arrays füllen
+  const labels=[], depCum=[], netCum=[], taxCum=[];
+  let value=start, paidCum=start;
   for(let y=1;y<=yrs;y++){
+    // Einmalzahlung zu Jahresbeginn
+    if(y===lumpY) paidCum+=lump, value+=lump;
+    // Monatsweiser Aufbau
     for(let m=0;m<12;m++){
-      value = value*(1+rM) + rate; // Monate vorher verzinsen
+      value*=1+pYear/12;
+      value+=rate;
+      paidCum+= (m===11?rate:0);
     }
-    if(lump>0 && y>=lumpY){ // Einmalzahlung addiert und ab jetzt verzinst
-      if(y===lumpY){ value += lump; }
-    }
-    paid += rate*12 + (y===lumpY?lump:0);
-    const gross = value - paid;
-    const tax   = withTax ? gross*taxRate : 0;
-    const net   = gross - tax;
+    const gross=value-paidCum;
+    const tax=withTax?gross*taxRate:0;
+    const net=gross-tax;
     labels.push('Jahr '+y);
-    depo.push(rate*12 + (y===lumpY?lump:0));
-    netArr.push(net);
-    taxArr.push(tax);
+    depCum.push(paidCum);
+    taxCum.push(tax);
+    netCum.push(net);
   }
 
-  const endCap=value; const profit=endCap-paid;
-  $("headline").textContent=`Endkapital: ${fmt(endCap)}   Einzahlungen: ${fmt(paid)}   Gewinn: ${fmt(profit)}`;
-  drawChart(labels,depo,netArr,taxArr);
-  drawCompare(endCap,paid,yrs);
-}
+  // Headline
+  const endCap=value, profit=endCap-paidCum;
+  headlineEl.textContent=`Endkapital: ${fmt(endCap)}   Einzahlungen: ${fmt(paidCum)}   Gewinn: ${fmt(profit)}`;
 
-function niceStep(max){
-  const raw=max/6; const pow=Math.pow(10,Math.floor(Math.log10(raw)));
-  return Math.ceil(raw/pow)*pow;
-}
-
-function drawChart(lbl,dep,net,tax){
+  // Chart zeichnen
   if(chartMain) chartMain.destroy();
-  const combined=dep.map((v,i)=>v+net[i]+tax[i]);
-  const maxY=Math.max(...combined);
-
-  chartMain = new Chart($("chart"),{
+  chartMain=new Chart(document.getElementById('chart'),{
     type:'bar',
-    data:{labels:lbl,datasets:[
-      {label:'Einzahlung',data:dep,backgroundColor:'#667aff',stack:'s',maxBarThickness:50},
-      {label:'Gewinn (netto)',data:net,backgroundColor:'#2ecc71',stack:'s',maxBarThickness:50},
-      {label:'Steuer',data:tax,backgroundColor:'#e74c3c',stack:'s',maxBarThickness:50}
+    data:{labels,datasets:[
+      {label:'Einzahlung (kumuliert)',data:depCum,backgroundColor:'rgba(101,115,255,0.7)',stack:'all'},
+      {label:'Gewinn (netto kumuliert)',data:netCum,backgroundColor:'rgba(46,204,113,0.7)',stack:'all'},
+      {label:'Steuer kumuliert',data:taxCum,backgroundColor:'rgba(231,76,60,0.7)',stack:'all'}
     ]},
     options:{
-      maintainAspectRatio:false,responsive:true,
+      responsive:true,maintainAspectRatio:false,
       plugins:{legend:{position:'bottom',labels:{font:{size:16}}}},
       scales:{
-        y:{beginAtZero:true,suggestedMax:maxY*1.2,
-          ticks:{stepSize:niceStep(maxY),font:{size:16},callback:v=>v.toLocaleString('de-DE')}},
-        x:{ticks:{font:{size:16}}}
+        y:{beginAtZero:true,ticks:{font:{size:16},stepSize:50000,callback:v=>v.toLocaleString('de-DE')}},
+        x:{ticks:{font:{size:14}}}
       }
     }
   });
-}
 
-function drawCompare(end,paid,yrs){
+  // Vergleich
   if(chartCompare) chartCompare.destroy();
-  const bank0=paid;
-  const tages=paid*Math.pow(1.02,yrs);
-  const maxY=Math.max(end,bank0,tages);
-
-  chartCompare = new Chart($("compare"),{
+  const bank0=paidCum,
+        tages=paidCum*Math.pow(1+0.02,yrs);
+  chartCompare=new Chart(document.getElementById('compare'),{
     type:'bar',
-    data:{labels:['ETF','Bank 0 %','Tagesgeld 2 %'],datasets:[{
-      data:[end,bank0,tages],backgroundColor:['#2ecc71','#95a5a6','#3498db'],maxBarThickness:50}]},
-    options:{maintainAspectRatio:false,responsive:true,plugins:{legend:{display:false}},
-      scales:{y:{beginAtZero:true,ticks:{stepSize:niceStep(maxY),font:{size:16},callback:v=>v.toLocaleString('de-DE')}},x:{ticks:{font:{size:16}}}}}
+    data:{labels:['ETF','Bank 0%','Tagesgeld 2%'],datasets:[{data:[endCap,bank0,tages],
+      backgroundColor:['rgba(46,204,113,0.7)','rgba(149,165,166,0.7)','rgba(52,152,219,0.7)']}]
+    },
+    options:{responsive:true,maintainAspectRatio:false,
+      plugins:{legend:{display:false}},
+      scales:{y:{beginAtZero:true,ticks:{font:{size:16},stepSize:50000,callback:v=>v.toLocaleString('de-DE')}},
+             x:{ticks:{font:{size:14}}}}
+    }
   });
 }
 </script>
+
 </body>
 </html>
